Add previous word button

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         <div class="status" id="status">Loading vocabulary...</div>
         <div class="word" id="word">...</div>
         <div class="controls">
-          <button id="speakBtn" class="btn">Parler</button>
-          <button id="revealBtn" class="btn">Révéler </button>
-          <button id="nextBtn" class="btn btn-primary">Mot suivant ➡</button>
+          <button id="speakBtn" class="btn">Parler 🗣️</button>
+          <button id="prevBtn" class="btn btn-primary">← Mot précédent</button>
+          <button id="nextBtn" class="btn btn-primary">Mot suivant →</button>
+          <button id="revealBtn" class="btn">Révéler</button>
         </div>
       </section>
 
