Show shuffled vocab list at the end of the test

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         </div>
       </section>
 
+      <section class="vocab-section is-hidden" id="vocabSection" aria-live="polite">
+        <h2 class="vocab-title">Liste complète</h2>
+        <ol class="vocab-list" id="vocabList"></ol>
+      </section>
+
       <p class="download">
         <a href="https://raw.githubusercontent.com/kcha/dictee-trainer/refs/heads/main/data/vocabulary.txt" aria-label="Download vocabulary list">Vocabulary List</a>
       </p>
